Fix: fix overflow issue on desktop Also add more locations

--- a/static/additional-css/main.css
+++ b/static/additional-css/main.css
@@ -38,6 +38,8 @@ html, body {
 }
 
 .sidenav {
+    height: 45vw;
+    overflow: auto;
     /*top: 0;*/
     /*bottom: 0;*/
     /*position: fixed;*/
